# RiscVSimulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yaml
examples/: factorialCommands.txt
include/: RiscVSimulator.h
include/base/: BaseInstruction.h
include/enums/: InstructionType.h
include/interface/: BaseInstruction.h
include/models/: RiscVSimulator.h
include/models/instructions/: BTypeInstruction.h  ITypeInstruction.h  JTypeInstruction.h  RTypeInstruction.h  STypeInstruction.h
include/utils/: utils.h
src/: RiscVSimulator.cpp  main.cpp
src/enums/: InstructionType.h
src/interface/: BaseInstruction.h
src/models/: RiscVSimulator.cpp  RiscVSimulator.h
src/models/instructions/: BTypeInstruction.cpp  BTypeInstruction.h  ITypeInstruction.cpp  ITypeInstruction.h  JTypeInstruction.cpp  JTypeInstruction.h  RTypeInstruction.cpp  RTypeInstruction.h  STypeInstruction.cpp  STypeInstruction.h
src/utils/: utils.h
x/: x.py
